[tool.poetry]
name = "cyecca"
version = "0.3.0"
description = "Symbolic Estimation and Control with Computer Algebra - A Lie group library for robotics built on CasADi"
authors = ["James Goppert <james.goppert@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^1.26"
casadi = "^3.6.5"
scipy = "^1.11"
sympy = "^1.12"
beartype = "^0.19.0"
pydot = {version = "^3.0.3", optional = true}

[tool.poetry.extras]
visualization = ["pydot"]

[tool.poetry.group.dev.dependencies]
black = {extras = ["jupyter"], version = "^24.10.0"}
isort = "^5.13.0"
jupyterlab = "^4.3.1"
nbmake = "^1.4.1"
pytest-cov = "^6.0.0"
pytest-xdist = "^3.6.0"
matplotlib = "^3.10.7"
sphinx = "^7.0.0"
sphinx-rtd-theme = "^2.0.0"
sphinx-autodoc-typehints = "^2.0.0"

[tool.pytest.ini_options]
addopts = "--doctest-modules --doctest-continue-on-failure"
doctest_optionflags = "NORMALIZE_WHITESPACE ELLIPSIS"
testpaths = ["cyecca", "tests"]

[tool.black]
line-length = 120
target-version = ['py310', 'py311', 'py312']
extend-exclude = '''
/(
    \.git
  | \.venv
  | venv
  | build
  | install
  | log
)/
'''

[tool.isort]
profile = "black"
line_length = 120
skip_gitignore = true
extend_skip_glob = ["build/*", "install/*", "log/*"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
