[tool.poetry]
name = "cyecca"
version = "0.4.0"
description = "Symbolic Estimation and Control with Computer Algebra - IR and analysis backend for Rumoca compiler"
authors = ["James Goppert <james.goppert@gmail.com>"]
readme = "README.md"
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.26"
casadi = "^3.6.5"
scipy = "^1.11"
beartype = "^0.19.0"
sympy = {version = "^1.12", optional = true}
matplotlib = {version = "^3.8", optional = true}
pydot = {version = "^3.0.3", optional = true}

[tool.poetry.extras]
sympy = ["sympy"]
plotting = ["matplotlib"]
visualization = ["pydot"]
all = ["sympy", "matplotlib", "pydot"]

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-cov = "^6.0.0"
black = "^24.0.0"
isort = "^5.13.0"
mypy = "^1.8.0"
ruff = "^0.1.0"
rumoca = "*"

[tool.pytest.ini_options]
testpaths = ["test"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"

[tool.black]
line-length = 100
target-version = ['py310', 'py311', 'py312']

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
