[tool.poetry]
name = "cyecca"
package-mode = false

[virtualenvs]
create = true
in-project = true

[tool.poetry.dependencies]
python = "~3.12"
sympy = "~1.12"
numpy = "~1.26"
control = "0.10.1"
matplotlib = "~3.6"
scipy = "~1.11"
ipykernel = "~6.29"
slycot = "~0.6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
